--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -23,7 +23,7 @@
                formControlName="password" placeholder="Password">
       </div>
       <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">
-        <i class="fa fa-sign-in"></i> Login
+        <i class="fa fa-sign-in"></i> login
       </button>
     </form>
   </div>
